--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.13.5
   firebase_ui_auth: ^1.7.0
+  flutter_spinkit: ^5.2.0
   flutter:
     sdk: flutter
   provider: ^6.1.1
